<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.sonarsource.parent</groupId>
    <artifactId>parent</artifactId>
    <version>55</version>
  </parent>

  <groupId>org.sonarsource.java</groupId>
  <artifactId>java</artifactId>
  <version>6.13.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>SonarJava</name>
  <description>Code Analyzer for Java</description>
  <url>http://redirect.sonarsource.com/plugins/java.html</url>
  <inceptionYear>2012</inceptionYear>
  <organization>
    <name>SonarSource</name>
    <url>http://www.sonarsource.com</url>
  </organization>
  <licenses>
    <license>
      <name>GNU LGPL 3</name>
      <url>http://www.gnu.org/licenses/lgpl.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>godin</id>
      <name>Evgeny Mandrikov</name>
      <organization>SonarSource</organization>
    </developer>
    <developer>
      <id>benzonico</id>
      <name>Nicolas Peru</name>
      <organization>SonarSource</organization>
    </developer>
    <developer>
      <id>m-g-sonar</id>
      <name>Michael Gumowski</name>
      <organization>SonarSource</organization>
    </developer>
    <developer>
      <id>saberduck</id>
      <name>Tibor Blenessy</name>
      <organization>SonarSource</organization>
    </developer>
  </developers>

  <modules>
    <module>jdt</module>
    <module>java-frontend</module>
    <module>java-checks-test-sources</module>
    <module>java-checks-testkit</module>
    <module>java-checks</module>
    <module>external-reports</module>
    <module>sonar-java-plugin</module>
    <module>java-surefire</module>
    <module>java-jsp</module>
    <module>its</module>
  </modules>

  <scm>
    <connection>scm:git:git@github.com:SonarSource/sonar-java.git</connection>
    <developerConnection>scm:git:git@github.com:SonarSource/sonar-java.git</developerConnection>
    <url>https://github.com/SonarSource/sonar-java</url>
    <tag>HEAD</tag>
  </scm>
  <issueManagement>
    <system>JIRA</system>
    <url>https://jira.sonarsource.com/browse/SONARJAVA</url>
  </issueManagement>
  <ciManagement>
    <system>Travis</system>
    <url>https://travis-ci.org/SonarSource/sonar-java</url>
  </ciManagement>

  <properties>
    <license.title>SonarQube Java</license.title>

    <maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>

    <sonar.version>7.9</sonar.version>
    <analyzer.commons.version>1.12.0.632</analyzer.commons.version>
    <orchestrator.version>3.34.0.2692</orchestrator.version>
    <sslr.version>1.24.0.633</sslr.version>
    <argLine>-Xmx512m</argLine>
    <gitRepositoryName>sonar-java</gitRepositoryName>

    <!-- Release: enable publication to Bintray -->
    <artifactsToPublish>${project.groupId}:sonar-java-plugin:jar</artifactsToPublish>

    <version.compiler.plugin>3.8.0</version.compiler.plugin>
    <!-- Parent uses 1.16 which has bug in overrideUrl https://github.com/mojohaus/license-maven-plugin/issues/331 -->
    <!-- TODO remove when parent is updated -->
    <version.codehaus.license.plugin>2.0.0</version.codehaus.license.plugin>
    <!-- FIXME: warnings on javadoc should be fixed -->
    <doclint>none</doclint>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.sonarsource.sonarqube</groupId>
        <artifactId>sonar-plugin-api</artifactId>
        <version>${sonar.version}</version>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.sonarqube</groupId>
        <artifactId>sonar-testing-harness</artifactId>
        <version>${sonar.version}</version>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.analyzer-commons</groupId>
        <artifactId>sonar-analyzer-commons</artifactId>
        <version>${analyzer.commons.version}</version>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.analyzer-commons</groupId>
        <artifactId>sonar-analyzer-recognizers</artifactId>
        <version>${analyzer.commons.version}</version>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.analyzer-commons</groupId>
        <artifactId>sonar-xml-parsing</artifactId>
        <version>${analyzer.commons.version}</version>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.analyzer-commons</groupId>
        <artifactId>sonar-analyzer-test-commons</artifactId>
        <version>${analyzer.commons.version}</version>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.analyzer-commons</groupId>
        <artifactId>test-sonar-xml-parsing</artifactId>
        <version>${analyzer.commons.version}</version>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.sslr</groupId>
        <artifactId>sslr-core</artifactId>
        <version>${sslr.version}</version>
        <exclusions>
          <exclusion>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>30.0-jre</version>
      </dependency>
      <dependency>
        <groupId>com.google.code.findbugs</groupId>
        <artifactId>jsr305</artifactId>
        <version>1.3.9</version>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.sslr</groupId>
        <artifactId>sslr-testing-harness</artifactId>
        <version>${sslr.version}</version>
        <exclusions>
          <exclusion>
            <groupId>org.easytesting</groupId>
            <artifactId>fest-assert</artifactId>
          </exclusion>
          <!-- junit 4.12 depends on more recent hamcrest -->
          <exclusion>
            <artifactId>hamcrest-all</artifactId>
            <groupId>org.hamcrest</groupId>
          </exclusion>
        </exclusions>
      </dependency>

      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.7.0</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.13.1</version>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>2.21.0</version>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-junit-jupiter</artifactId>
        <version>2.21.0</version>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>3.17.2</version>
      </dependency>

      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>1.6.2</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-classic</artifactId>
        <version>0.9.30</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-project</artifactId>
        <version>2.0.7</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>3.11</version>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>2.8.0</version>
      </dependency>
      <dependency>
        <groupId>com.google.code.gson</groupId>
        <artifactId>gson</artifactId>
        <version>2.8.6</version>
        <scope>compile</scope>
      </dependency>

      <dependency>
        <groupId>com.fasterxml.woodstox</groupId>
        <artifactId>woodstox-core</artifactId>
        <version>5.1.0</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.staxmate</groupId>
        <artifactId>staxmate</artifactId>
        <version>2.3.1</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <configuration/>
        </plugin>

        <plugin>
          <groupId>de.thetaphi</groupId>
          <artifactId>forbiddenapis</artifactId>
          <version>2.6</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>de.thetaphi</groupId>
        <artifactId>forbiddenapis</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
            <configuration>
              <failOnUnresolvableSignatures>false</failOnUnresolvableSignatures>
              <signatures>
                <![CDATA[
                com.google.common.base.Preconditions#checkNotNull(java.lang.Object) @ use java.util.Objects#requireNonNull(java.lang.Object) instead

                com.google.common.collect.ImmutableList#of(java.lang.Object) @ use java.util.Collections#singletonList(java.util.Objects#requireNonNull(java.lang.Object)) instead, and also consider omitting unnecessary null-checks
                com.google.common.collect.ImmutableSet#of(java.lang.Object) @ use java.util.Collections#singleton(java.util.Objects#requireNonNull(java.lang.Object)) instead, and also consider omitting unnecessary null-checks

                com.google.common.collect.ImmutableList#of() @ use java.util.Collections#emptyList() instead
                com.google.common.collect.ImmutableSet#of() @ use java.util.Collections#emptySet() instead

                # According to javadoc of following methods
                # "for Java 7 and later: this method is now unnecessary and should be treated as deprecated"
                @defaultMessage use diamond operator instead
                com.google.common.collect.Lists#newArrayList()
                com.google.common.collect.Lists#newLinkedList()
                com.google.common.collect.Maps#newHashMap()
                com.google.common.collect.Sets#newHashSet()
                com.google.common.base.Objects @ use java.util.Objects instead
                ]]>
              </signatures>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <!-- Use javac's release flag for Java 9 and higher -->
      <id>java9+</id>
      <activation>
        <jdk>[9,)</jdk>
      </activation>
      <properties>
        <maven.compiler.release>8</maven.compiler.release>
      </properties>
    </profile>
  </profiles>
</project>
